--- a/ace-gate-way/src/main/resources/templates/group/list.html
+++ b/ace-gate-way/src/main/resources/templates/group/list.html
@@ -52,6 +52,9 @@
         <button class="layui-btn layui-btn-small" id="btn_resourceManager">
             <i class="fa fa-lock"></i>分配权限
         </button>
+        <button class="layui-btn layui-btn-small" id="btn_menuManager">
+            <i class="fa fa-rocket"></i>分配菜单
+        </button>
     </div>
     <table id="groupTable">
 
